# video-to-mp3

./: .gitignore  .lintstagedrc.json  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: build.yml
scripts/: fetch-sidecars.ps1  fetch-sidecars.sh
src/: App.css  App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: downloader.rs  lib.rs  main.rs
src-tauri/src/download/: app_error.rs  commands.rs  errors.rs  events.rs  manager.rs  mod.rs  parser.rs  paths.rs  runner.rs
src/api/: downloads.test.ts  downloads.ts
src/components/: DownloadList.module.css  DownloadList.tsx  Header.module.css  Header.tsx  InputCard.module.css  InputCard.tsx  StatusBar.module.css  StatusBar.tsx  Tabs.module.css  Tabs.tsx  ToastArea.module.css  ToastArea.tsx
src/components/DownloadRow/: DownloadRow.module.css  index.tsx  statusStrategies.test.ts  statusStrategies.tsx
src/hooks/: useDownloads.test.ts  useDownloads.ts  useOsNotifications.ts  useToasts.ts
src/styles/: globals.css  tokens.css
src/test/: setup.ts
src/types/: download.ts
src/utils/: ids.test.ts  ids.ts  urlValidator.test.ts  urlValidator.ts
