[package]
name = "video-mp3"
version = "0.1.0"
description = "Video to MP3 converter"
authors = ["you"]
edition = "2021"

[lib]
name = "video_mp3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
dirs = "5"
once_cell = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = "10"

# Faster release link on CI. ~5% bigger binary, ~4x faster link.
[profile.release]
lto = "thin"
codegen-units = 16
strip = true
